# frank

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  Procfile.dev  README.md  fly.toml  frank.db  main.py  modal_app.py  nginx.conf  package-lock.json  pyproject.toml  requirements.txt  server.py
.github/workflows/: deploy-client.yml  deploy-server.yml  deploy.yml
alembic/: env.py
alembic/versions/: 122883499347_add_chat_tables.py  ebea11326551_init_db.py
client/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
client/src/: App.test.tsx  App.tsx  index.css  supabase.ts  types.ts
client/src/components/: Chat.test.tsx  Chat.tsx  ChatHistory.tsx  ChatInput.test.tsx  ChatInput.tsx  Home.test.tsx  Home.tsx  Logout.test.tsx  Logout.tsx  Message.test.tsx  Message.tsx  Messages.test.tsx  Messages.tsx  NavBar.test.tsx  NavBar.tsx  Settings.test.tsx  Settings.tsx
client/src/hooks/: useChat.ts  useTheme.ts
client/src/lib/: pydantic-types.ts  utils.test.ts
client/src/store/: auth.test.ts  auth.ts  chat.test.ts  chat.ts  index.ts  settings.test.ts  settings.ts
deploy/: .dockerignore  Dockerfile  fly.toml  nginx.conf  start.sh
docs/: aws.md
frank/: agent.py  agents.py  models.py  prompts.py  schemas.py  ws.py
frank/api/: deps.py  routes.py
frank/core/: config.py  db.py  logging.py  redis.py  supabase.py
frank/db/: models.py
frank/services/: auth.py  chat.py
infra/server/: README.md  setup_ec2.sh
supabase/: config.toml
supabase/migrations/: 20250816181328_remote_schema.sql  20250817072906_chats.sql  20250817100729_chat_fields_and_indexes.sql
tests/: conftest.py  test_chat_title.py  test_http.py  test_new_chat.py  test_ws.py
(+2 files in other folders)
