[project]
name = "frank"
version = "0.1.0"
description = "Frank chat"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiosqlite>=0.22.1",
  "alembic>=1.18.3",
  "cachetools>=5.5.2",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "logfire[fastapi]>=4.0.0",
  "alembic>=1.13.0",
  "pydantic>=2.11.7",
  "pydantic-ai>=0.4.9",
  "pydantic-settings>=2.10.1",
  "sqlalchemy>=2.0.46",
  "upstash-redis>=1.4.0",
  "greenlet>=3.3.1",
]

[dependency-groups]
dev = [
  "clai>=0.4.9",
  "honcho>=2.0.0",
  "pydantic-to-typescript>=2.0.0",
  "pytest>=8.0",
  "pytest-asyncio>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"
